--- a/src/app/features/personal_information/address-book/address-book.component.css
+++ b/src/app/features/personal_information/address-book/address-book.component.css
@@ -120,6 +120,10 @@
     .btn-delete {
         margin-left: 16px !important;
     }
+
+    .personal-info-container {
+        margin-top: 75px !important;
+    }
 }
 
 /* Tablet */
@@ -136,12 +140,16 @@
     .offfcanvas-option {
         padding: 10px;
     }
+
+    .personal-info-container {
+        margin-top: 75px !important;
+    }
 }
 
 /* DT */
 @media (min-width: 993px) {
     .personal-info-container {
         width: 80%;
-        margin-top: 36px !important;
+        margin-top: 90px !important;
     }
 }
