--- a/src/app/features/personal_information/address-book/address-book.component.html
+++ b/src/app/features/personal_information/address-book/address-book.component.html
@@ -1,5 +1,5 @@
 <app-header />
-<div class="row personal-info-container mt-3 mb-5 mx-auto">
+<div class="row personal-info-container mb-5 mx-auto">
     <div class="col-lg-3 d-none d-lg-block">
         <app-sidebar-personal-info />
     </div>
