--- a/src/app/features/personal_information/change-password/change-password.component.css
+++ b/src/app/features/personal_information/change-password/change-password.component.css
@@ -60,6 +60,10 @@
     .label-name {
         margin-bottom: 30px;
     }
+
+    .personal-info-container {
+        margin-top: 75px !important;
+    }
 }
 
 /* Tablet */
@@ -76,12 +80,16 @@
     .offfcanvas-option {
         padding: 10px;
     }
+
+    .personal-info-container {
+        margin-top: 75px !important;
+    }
 }
 
 /* DT */
 @media (min-width: 993px) {
     .personal-info-container {
         width: 80%;
-        margin-top: 36px !important;
+        margin-top: 90px !important;
     }
 }
