--- a/src/app/features/personal_information/my-orders/my-orders.component.css
+++ b/src/app/features/personal_information/my-orders/my-orders.component.css
@@ -125,6 +125,10 @@
         height: 1px !important;
         margin-top: 0 !important;
     }
+
+    .personal-info-container {
+        margin-top: 75px !important;
+    }
     
 }
 
@@ -170,13 +174,17 @@
         height: 1px !important;
         margin-top: 0 !important;
     }
+
+    .personal-info-container {
+        margin-top: 75px !important;
+    }
 }
 
 /* DT */
 @media (min-width: 993px) {
     .personal-info-container {
         width: 80%;
-        margin-top: 36px !important;
+        margin-top: 90px !important;
     }
 
     .modal-dialog.custom-width {
