Hung fixed margin

--- a/src/app/features/auth/sign-in/sign-in.component.html
+++ b/src/app/features/auth/sign-in/sign-in.component.html
@@ -6,7 +6,8 @@
         <div class="col-12 mb-5">
             <div class="sign-in-modal row m-auto">
                 <div class="d-none d-lg-block col-lg-6 m-0 p-0">
-                    <img class="image-man-korea h-100 w-100" src="../../../../assets/images/auth/anh_trai_han.jpg" alt="">
+                    <img class="image-man-korea h-100 w-100" src="../../../../assets/images/auth/anh_trai_han.jpg"
+                        alt="">
                 </div>
                 <div class="col-12 col-sm-12 col-md-12 col-lg-6 p-4">
                     <form action="">
@@ -18,26 +19,29 @@
                                 <a class="d-block float-end title-sign-up" [routerLink]="['/sign-up']">Đăng ký</a>
                             </div>
                         </div>
-        
+
                         <!-- Field: Email -->
                         <div class="mb-4 mt-3">
-                          <label for="email" class="form-label d-block mb-3">Email</label>
-                          <input type="email" class="form-control" id="email" name="email">
+                            <label for="email" class="form-label d-block mb-3">Email</label>
+                            <input type="email" class="form-control" id="email" name="email">
                         </div>
-        
+
                         <!-- Field: Password -->
                         <div class="mb-4 mt-3">
                             <label for="password" class="form-label d-block mb-3">Mật khẩu</label>
                             <div class="password-container">
-                                <input type="password" class="form-control" id="password" name="password">
-                                <i class="fa-solid fa-eye eye-icon-password"></i>
+                                <input class="form-control" id="password" name="password"
+                                    [type]="isPasswordVisible ? 'text' : 'password'">
+                                <a (click)="togglePasswordVisibility()" class="eye-icon-password">
+                                    <p>{{PasswordVisible}}</p>
+                                </a>
                             </div>
                         </div>
 
-                        <a class="forget-password d-block float-end">Quên mật khẩu?</a>
-        
+                        <a class="forget-password d-block float-end" style="cursor: pointer;">Quên mật khẩu?</a>
+
                         <button type="submit" class="btn btn-dark w-100 mt-5">Đăng Nhập</button>
-                      </form>
+                    </form>
                 </div>
             </div>
         </div>
