--- a/src/app/features/auth/sign-up/sign-up.component.html
+++ b/src/app/features/auth/sign-up/sign-up.component.html
@@ -6,7 +6,8 @@
         <div class="col-12 mb-5">
             <div class="sign-up-modal row m-auto">
                 <div class="d-none d-lg-block col-lg-6 m-0 p-0">
-                    <img class="image-man-korea h-100 w-100" src="../../../../assets/images/auth/anh_trai_han.jpg" alt="">
+                    <img class="image-man-korea h-100 w-100" src="../../../../assets/images/auth/anh_trai_han.jpg"
+                        alt="">
                 </div>
                 <div class="col-12 col-sm-12 col-md-12 col-lg-6 p-4">
                     <form action="">
@@ -20,64 +21,75 @@
                         </div>
                         <!-- Field: Name -->
                         <div class="mb-3 mt-2">
-                          <label for="name" class="form-label">Họ tên</label>
-                          <input type="text" class="form-control" id="name" name="name">
+                            <label for="name" class="form-label">Họ tên</label>
+                            <input type="text" class="form-control" id="name" name="name">
                         </div>
-        
+
                         <!-- Field: Email -->
                         <div class="mb-3">
-                          <label for="email" class="form-label">Email</label>
-                          <input type="email" class="form-control" id="email" name="email">
+                            <label for="email" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="email" name="email">
                         </div>
-        
+
                         <!-- Field: Phone -->
                         <div class="mb-3">
-                          <label for="phone" class="form-label">Số điện thoại</label>
-                          <input type="number" class="form-control" id="phone" name="phone">
+                            <label for="phone" class="form-label">Số điện thoại</label>
+                            <input type="number" class="form-control" id="phone" name="phone">
                         </div>
-        
+
                         <!-- Field: Birthday -->
                         <div class="mb-3 mt-3">
                             <label for="birthday" class="form-label">Ngày sinh</label>
                             <input type="date" class="form-control" id="birthday" name="birthday" value="2000-01-01">
                         </div>
-        
+
                         <!-- Field: Gender -->
                         <div class="mb-3 mt-3">
                             <label for="gender" class="form-label">Giới tính</label>
                             <div class="row">
                                 <div class="col-6">
                                     <div class="form-check">
-                                        <input type="radio" class="form-check-input" id="man" name="gender_radio" value="nam" checked>Nam
+                                        <input type="radio" class="form-check-input" id="man" name="gender_radio"
+                                            value="nam" checked>Nam
                                         <label class="form-check-label" for="man"></label>
                                     </div>
                                 </div>
                                 <div class="col-6">
                                     <div class="form-check">
-                                        <input type="radio" class="form-check-input" id="woman" name="gender_radio" value="nữ">Nữ
+                                        <input type="radio" class="form-check-input" id="woman" name="gender_radio"
+                                            value="nữ">Nữ
                                         <label class="form-check-label" for="woman"></label>
                                     </div>
                                 </div>
                             </div>
                         </div>
-        
+
                         <!-- Field: Password -->
                         <div class="mb-3 mt-3">
                             <label for="password" class="form-label">Mật khẩu</label>
                             <div class="password-container">
-                                <input type="password" class="form-control" id="password" name="password">
-                                <i class="fa-solid fa-eye eye-icon-password"></i>
+                                <input class="form-control" id="password" name="password"
+                                    [type]="isPasswordVisible ? 'text' : 'password'">
+                                <a (click)="togglePasswordVisibility()" class="eye-icon-password">
+                                    <p>{{PasswordVisible}}</p>
+                                </a>
                             </div>
                         </div>
-        
+
                         <!-- Field: Password -->
                         <div class="mb-3 mt-3">
                             <label for="re_enter_password" class="form-label">Nhập lại mật khẩu</label>
-                            <input type="password" class="form-control" id="re_enter_password" name="re_enter_password">
+                            <div class="password-container">
+                                <input class="form-control" id="re_enter_password" name="re_enter_password"
+                                    [type]="isReInputPasswordVisible ? 'text' : 'password'">
+                                <a (click)="toggleReInputPasswordVisibility()" class="eye-icon-password">
+                                    <p>{{ReInputPasswordVisible}}</p>
+                                </a>
+                            </div>
                         </div>
-        
+
                         <button type="submit" class="btn btn-dark w-100 mt-3">Đăng Ký</button>
-                      </form>
+                    </form>
                 </div>
             </div>
         </div>
