--- a/src/app/features/home/home/home.component.html
+++ b/src/app/features/home/home/home.component.html
@@ -1,6 +1,6 @@
 <app-header />
   
-<div class="home-container">
+<div class="home-container" style="margin-top: 70px !important;">
   
     <section class="slider">
       <div class="slide-container" #slideContainer>
