--- a/src/app/features/shop/shop/shop.component.html
+++ b/src/app/features/shop/shop/shop.component.html
@@ -1,5 +1,5 @@
 <app-header />
-<div class="container-fluid container-shop-page">
+<div class="container-fluid container-shop-page" style="margin-top: 60px !important;">
     <div class="row">
         <div class="col-lg-3 d-none d-lg-block">
             <app-sidebar-shop />
