--- a/src/app/features/personal_information/change-password/change-password.component.css
+++ b/src/app/features/personal_information/change-password/change-password.component.css
@@ -34,6 +34,21 @@
     background-color: #212529;
 }
 
+.password-container {
+    position: relative;
+}
+
+.eye-icon-password {
+    position: absolute;
+    top: 8px;
+    right: 22px;
+    font-size: 14px;
+    text-decoration: none;
+    font-weight: 500;
+    cursor: pointer;
+    color: #184AFA;
+}
+
 /* DT */
 @media (max-width: 767px) {
     .record-container {
