--- a/src/app/features/shop/product-details/product-details.component.html
+++ b/src/app/features/shop/product-details/product-details.component.html
@@ -1,6 +1,6 @@
 <app-header />
 <section class="bg-light">
-    <div class="container pb-5">
+    <div class="container pb-5" style="margin-top: 40px !important;">
         <div class="row">
             <div class="col-lg-7 mt-5">
                 <app-image-slider></app-image-slider>
