--- a/src/app/shared/components/header/header.component.css
+++ b/src/app/shared/components/header/header.component.css
@@ -87,4 +87,8 @@
         width: 320px !important;
         border: none;
     }
+
+    .nav-item a:hover, .nav-item button:hover{
+        opacity: 0.6;
+    }
 }
