--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -46,7 +46,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="javascript:void(0)" style="color: #fff;">
+                            <a class="nav-link" [routerLink]="['/sign-in']" style="color: #fff;">
                                 <i class="fa-solid fa-user me-1"></i>
                                 Đăng nhập/Đăng ký
                             </a>
