--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -2,7 +2,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-2 fixed-top">
         <div class="container">
             <div style="margin-right:  30px !important;">
-                <img width="100%" src="../../../../assets/images/logo/logo.png" alt="Logo" />
+                <img width="100%" src="../../../../assets/images/logo/logo.png" alt="Logo" style="cursor: pointer;" [routerLink]="['/']"/>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
                 <span class="navbar-toggler-icon"></span>
