--- a/src/app/features/admin/manage-brand/manage-brand.component.html
+++ b/src/app/features/admin/manage-brand/manage-brand.component.html
@@ -3,16 +3,26 @@
         <div class="container-fluid px-4">
             <h1 class="mt-4">Thương hiệu</h1>
             <div class="mb-3 d-flex flex-row-reverse">
-                <button type="button" class="btn btn-dark" (click)="handleAddAction()">
+                <button type="button" class="btn btn-dark" (click)="showDialog()">
                     Thêm thương hiệu
                 </button>
             </div>
             <div class="card mb-4">
                 <p-toast></p-toast>
+                <p-confirmDialog />
                 <div class="card-body">
                     <div class="card-body">
-                        <p-table editMode="row" [value]="brands" dataKey="Bra_ID" [paginator]="true" [rows]="10"
-                            [responsiveLayout]="'scroll'">
+                        <p-table #dt editMode="row" [value]="brands" dataKey="Bra_ID" [paginator]="true" [rows]="10"
+                            [globalFilterFields]="['Bra_ID', 'Bra_Name', 'Bra_Status']" [responsiveLayout]="'scroll'">
+                            <ng-template pTemplate="caption">
+                                <div class="d-flex">
+                                    <span class="p-input-icon-left ml-auto">
+                                        <i class="pi pi-search"></i>
+                                        <input pInputText type="text" style="width: 200px;"
+                                            (input)="handleInput($event, dt)" placeholder="Tìm kiếm" />
+                                    </span>
+                                </div>
+                            </ng-template>
                             <ng-template pTemplate="header">
                                 <tr>
                                     <th style="width:10%">ID</th>
@@ -47,13 +57,16 @@
                                                     [severity]="getSeverity(brand.Bra_Status)" />
                                             </ng-template>
                                         </p-cellEditor>
-                                        <!-- <p-tag [value]="brand.Bra_Status ? 'Hoạt động' : 'Ngừng bán' " [severity]="getSeverity(brand.Bra_Status)"/> -->
                                     </td>
                                     <td>
                                         <div class="flex align-items-center justify-content-center gap-2">
                                             <button *ngIf="!editing" pButton pRipple type="button" pInitEditableRow
                                                 icon="pi pi-pencil" (click)="onRowEditInit(brand)"
                                                 class="p-button-rounded p-button-text">
+                                            </button>
+                                            <button *ngIf="!editing" pButton pRipple type="button" icon="pi pi-trash"
+                                                (click)="deleteProduct(brand)"
+                                                class="p-button-rounded p-button-text p-button-danger">
                                             </button>
                                             <button *ngIf="editing" pButton pRipple type="button" pSaveEditableRow
                                                 icon="pi pi-check" (click)="onRowEditSave(brand, ri)"
@@ -69,10 +82,29 @@
                             </ng-template>
                         </p-table>
                     </div>
-
                 </div>
             </div>
         </div>
     </main>
+
     <app-admin-footer></app-admin-footer>
 </div>
+
+<p-dialog header="Thêm thương hiệu" [modal]="true" [(visible)]="visible" [style]="{ width: '25rem' }"
+    styleClass="p-fluid">
+    <form>
+        <div class="mb-4">
+            <label for="name" class="form-label">Tên thương hiệu</label>
+            <input type="text" class="form-control" id="name" placeholder="Nhập tên" name="name">
+        </div>
+        <div class="mb-4">
+            <label class="form-check-label me-2" for="active">Trạng thái:</label>
+            <input class="form-check-input" type="radio" name="active" id="visible"> Hoạt động
+            <input class="form-check-input ms-2" type="radio" name="active" id="disable"> ngừng bán
+        </div>
+        <div class="d-flex justify-content-end gap-2 mt-4">
+            <p-button label="Hủy" severity="secondary" (onClick)="visible = false" />
+            <p-button label="Lưu" (onClick)="visible = false" />
+        </div>
+    </form>
+</p-dialog>
