--- a/src/app/features/admin/manage-category/manage-category.component.html
+++ b/src/app/features/admin/manage-category/manage-category.component.html
@@ -3,22 +3,34 @@
         <div class="container-fluid px-4">
             <h1 class="mt-4">Danh mục</h1>
             <div class="mb-3 d-flex flex-row-reverse">
-                <button type="button" class="btn btn-dark" (click)="handleAddAction()">
+                <button type="button" class="btn btn-dark" (click)="showDialog()">
                     Thêm danh mục
                 </button>
             </div>
             <div class="card mb-4">
                 <p-toast></p-toast>
+                <p-confirmDialog />
                 <div class="card-body">
                     <div class="card-body">
-                        <p-table editMode="row" [value]="categories" [paginator]="true" [rows]="10" [responsiveLayout]="'scroll'">
+                        <p-table #dt editMode="row" [value]="categories" dataKey="Cat_ID" [paginator]="true" [rows]="10"
+                            [globalFilterFields]="['Cat_ID', 'Cat_Name', 'Cat_Desc', 'Cat_Status']"
+                            [responsiveLayout]="'scroll'">
+                            <ng-template pTemplate="caption">
+                                <div class="d-flex">
+                                    <span class="p-input-icon-left ml-auto">
+                                        <i class="pi pi-search"></i>
+                                        <input pInputText type="text" style="width: 200px;"
+                                            (input)="handleInput($event, dt)" placeholder="Tìm kiếm" />
+                                    </span>
+                                </div>
+                            </ng-template>
                             <ng-template pTemplate="header">
                                 <tr>
-                                    <th>ID</th>
-                                    <th>Tên Danh Mục</th>
-                                    <th>Mô Tả</th>
-                                    <th>Trạng Thái</th>
-                                    <th></th>
+                                    <th style="width:10%">ID</th>
+                                    <th style="width:40%">Tên Danh Mục</th>
+                                    <th style="width:30%">Mô Tả</th>
+                                    <th style="width:10%">Trạng Thái</th>
+                                    <th style="width:10%"></th>
                                 </tr>
                             </ng-template>
                             <ng-template pTemplate="body" let-category let-editing="editing" let-ri="rowIndex">
@@ -27,9 +39,7 @@
                                     <td>
                                         <p-cellEditor>
                                             <ng-template pTemplate="input">
-                                                <input 
-                                                    pInputText type="text" 
-                                                    [(ngModel)]="category.Cat_Name" />
+                                                <input pInputText type="text" [(ngModel)]="category.Cat_Name" />
                                             </ng-template>
                                             <ng-template pTemplate="output">
                                                 {{ category.Cat_Name }}
@@ -39,9 +49,7 @@
                                     <td>
                                         <p-cellEditor>
                                             <ng-template pTemplate="input">
-                                                <input 
-                                                    pInputText type="text" 
-                                                    [(ngModel)]="category.Cat_Desc" />
+                                                <input pInputText type="text" [(ngModel)]="category.Cat_Desc" />
                                             </ng-template>
                                             <ng-template pTemplate="output">
                                                 {{ category.Cat_Desc }}
@@ -59,13 +67,16 @@
                                                     [severity]="getSeverity(category.Cat_Status)" />
                                             </ng-template>
                                         </p-cellEditor>
-                                        <!-- <p-tag [value]="category.Cat_Status ? 'Hoạt động' : 'Ngừng bán' " [severity]="getSeverity(category.Cat_Status)"/> -->
                                     </td>
                                     <td>
                                         <div class="flex align-items-center justify-content-center gap-2">
                                             <button *ngIf="!editing" pButton pRipple type="button" pInitEditableRow
                                                 icon="pi pi-pencil" (click)="onRowEditInit(category)"
                                                 class="p-button-rounded p-button-text">
+                                            </button>
+                                            <button *ngIf="!editing" pButton pRipple type="button" icon="pi pi-trash"
+                                                (click)="deleteCategory(category)"
+                                                class="p-button-rounded p-button-text p-button-danger">
                                             </button>
                                             <button *ngIf="editing" pButton pRipple type="button" pSaveEditableRow
                                                 icon="pi pi-check" (click)="onRowEditSave(category, ri)"
@@ -81,10 +92,32 @@
                             </ng-template>
                         </p-table>
                     </div>
-                    
                 </div>
             </div>
         </div>
     </main>
     <app-admin-footer></app-admin-footer>
 </div>
+
+<p-dialog header="Thêm danh mục" [modal]="true" [(visible)]="visible" [style]="{ width: '25rem' }"
+    styleClass="p-fluid">
+    <form>
+        <div class="mb-4">
+            <label for="name" class="form-label">Tên danh mục</label>
+            <input type="text" class="form-control" id="name" placeholder="Nhập tên" name="name">
+        </div>
+        <div class="mb-4">
+            <label for="desc" class="form-label">Mô tả</label>
+            <textarea class="form-control" id="desc" placeholder="Nhập mô tả" name="desc" rows="3"></textarea>
+        </div>
+        <div class="mb-4">
+            <label class="form-check-label me-2" for="active">Trạng thái:</label>
+            <input class="form-check-input" type="radio" name="active" id="visible"> Hoạt động
+            <input class="form-check-input ms-2" type="radio" name="active" id="disable"> Ngừng bán
+        </div>
+        <div class="d-flex justify-content-end gap-2 mt-4">
+            <p-button label="Hủy" severity="secondary" (onClick)="visible = false" />
+            <p-button label="Lưu" (onClick)="visible = false" />
+        </div>
+    </form>
+</p-dialog>
