--- a/src/app/features/admin/manage-color/manage-color.component.html
+++ b/src/app/features/admin/manage-color/manage-color.component.html
@@ -3,19 +3,30 @@
         <div class="container-fluid px-4">
             <h1 class="mt-4">Màu sắc</h1>
             <div class="mb-3 d-flex flex-row-reverse">
-                <button type="button" class="btn btn-dark" (click)="handleAddAction()">Thêm màu sắc</button>
+                <button type="button" class="btn btn-dark" (click)="showDialog()">Thêm màu sắc</button>
             </div>
             <div class="card mb-4">
                 <p-toast></p-toast>
+                <p-confirmDialog></p-confirmDialog>
                 <div class="card-body">
                     <div class="card-body">
-                        <p-table editMode="row" dataKey="Col_ID" [value]="colors" [paginator]="true" [rows]="10" [responsiveLayout]="'scroll'">
+                        <p-table #dt editMode="row" [value]="colors" dataKey="Col_ID" [paginator]="true" [rows]="10"
+                            [globalFilterFields]="['Col_ID', 'Col_Name', 'Col_Status']" [responsiveLayout]="'scroll'">
+                            <ng-template pTemplate="caption">
+                                <div class="d-flex">
+                                    <span class="p-input-icon-left ml-auto">
+                                        <i class="pi pi-search"></i>
+                                        <input pInputText type="text" style="width: 200px;"
+                                            (input)="handleInput($event, dt)" placeholder="Tìm kiếm" />
+                                    </span>
+                                </div>
+                            </ng-template>
                             <ng-template pTemplate="header">
                                 <tr>
-                                    <th>ID</th>
-                                    <th>Tên Màu</th>
-                                    <th>Trạng Thái</th>
-                                    <th></th>
+                                    <th style="width:10%">ID</th>
+                                    <th style="width:70%">Tên Màu</th>
+                                    <th style="width:10%">Trạng Thái</th>
+                                    <th style="width:10%"></th>
                                 </tr>
                             </ng-template>
                             <ng-template pTemplate="body" let-color let-editing="editing" let-ri="rowIndex">
@@ -24,9 +35,7 @@
                                     <td>
                                         <p-cellEditor>
                                             <ng-template pTemplate="input">
-                                                <input 
-                                                    pInputText type="text" 
-                                                    [(ngModel)]="color.Col_Name" />
+                                                <input pInputText type="text" [(ngModel)]="color.Col_Name" />
                                             </ng-template>
                                             <ng-template pTemplate="output">
                                                 {{ color.Col_Name }}
@@ -51,6 +60,10 @@
                                                 icon="pi pi-pencil" (click)="onRowEditInit(color)"
                                                 class="p-button-rounded p-button-text">
                                             </button>
+                                            <button *ngIf="!editing" pButton pRipple type="button" icon="pi pi-trash"
+                                                (click)="deleteColor(color)"
+                                                class="p-button-rounded p-button-text p-button-danger">
+                                            </button>
                                             <button *ngIf="editing" pButton pRipple type="button" pSaveEditableRow
                                                 icon="pi pi-check" (click)="onRowEditSave(color, ri)"
                                                 class="p-button-rounded p-button-text p-button-success mr-2">
@@ -71,3 +84,22 @@
     </main>
     <app-admin-footer></app-admin-footer>
 </div>
+
+<p-dialog header="Thêm màu sắc" [modal]="true" [(visible)]="visible" [style]="{ width: '25rem' }"
+    styleClass="p-fluid">
+    <form>
+        <div class="mb-4">
+            <label for="name" class="form-label">Tên màu sắc</label>
+            <input type="text" class="form-control" id="name" placeholder="Nhập tên" name="name">
+        </div>
+        <div class="mb-4">
+            <label class="form-check-label me-2" for="active">Trạng thái:</label>
+            <input class="form-check-input" type="radio" name="active" id="visible"> Hoạt động
+            <input class="form-check-input ms-2" type="radio" name="active" id="disable"> Ngừng bán
+        </div>
+        <div class="d-flex justify-content-end gap-2 mt-4">
+            <p-button label="Hủy" severity="secondary" (onClick)="visible = false" />
+            <p-button label="Lưu" (onClick)="visible = false" />
+        </div>
+    </form>
+</p-dialog>
