--- a/src/app/features/admin/manage-size/manage-size.component.html
+++ b/src/app/features/admin/manage-size/manage-size.component.html
@@ -3,20 +3,32 @@
         <div class="container-fluid px-4">
             <h1 class="mt-4">Kích thước</h1>
             <div class="mb-3 d-flex flex-row-reverse">
-                <button type="button" class="btn btn-dark" (click)="handleAddAction()">Thêm kích thước</button>
+                <button type="button" class="btn btn-dark" (click)="showDialog()">Thêm kích thước</button>
             </div>
             <div class="card mb-4">
                 <p-toast></p-toast>
+                <p-confirmDialog></p-confirmDialog>
                 <div class="card-body">
                     <div class="card-body">
-                        <p-table editMode="row" dataKey="Siz_ID" [value]="sizes" [paginator]="true" [rows]="10" [responsiveLayout]="'scroll'">
+                        <p-table #dt editMode="row" [value]="sizes" dataKey="Siz_ID" [paginator]="true" [rows]="10"
+                            [globalFilterFields]="['Siz_ID', 'Siz_Name', 'Siz_Desc', 'Siz_Status']"
+                            [responsiveLayout]="'scroll'">
+                            <ng-template pTemplate="caption">
+                                <div class="d-flex">
+                                    <span class="p-input-icon-left ml-auto">
+                                        <i class="pi pi-search"></i>
+                                        <input pInputText type="text" style="width: 200px;"
+                                            (input)="handleInput($event, dt)" placeholder="Tìm kiếm" />
+                                    </span>
+                                </div>
+                            </ng-template>
                             <ng-template pTemplate="header">
                                 <tr>
-                                    <th>ID</th>
-                                    <th>Tên Kích Thước</th>
-                                    <th>Mô Tả</th>
-                                    <th>Trạng Thái</th>
-                                    <th></th>
+                                    <th style="width:10%">ID</th>
+                                    <th style="width:40%">Tên Kích Thước</th>
+                                    <th style="width:30%">Mô Tả</th>
+                                    <th style="width:10%">Trạng Thái</th>
+                                    <th style="width:10%"></th>
                                 </tr>
                             </ng-template>
                             <ng-template pTemplate="body" let-size let-editing="editing" let-ri="rowIndex">
@@ -25,9 +37,7 @@
                                     <td>
                                         <p-cellEditor>
                                             <ng-template pTemplate="input">
-                                                <input 
-                                                    pInputText type="text" 
-                                                    [(ngModel)]="size.Siz_Name" />
+                                                <input pInputText type="text" [(ngModel)]="size.Siz_Name" />
                                             </ng-template>
                                             <ng-template pTemplate="output">
                                                 {{ size.Siz_Name }}
@@ -37,9 +47,7 @@
                                     <td>
                                         <p-cellEditor>
                                             <ng-template pTemplate="input">
-                                                <input 
-                                                    pInputText type="text" 
-                                                    [(ngModel)]="size.Siz_Desc" />
+                                                <input pInputText type="text" [(ngModel)]="size.Siz_Desc" />
                                             </ng-template>
                                             <ng-template pTemplate="output">
                                                 {{ size.Siz_Desc }}
@@ -64,6 +72,10 @@
                                                 icon="pi pi-pencil" (click)="onRowEditInit(size)"
                                                 class="p-button-rounded p-button-text">
                                             </button>
+                                            <button *ngIf="!editing" pButton pRipple type="button" icon="pi pi-trash"
+                                                (click)="deleteSize(size)"
+                                                class="p-button-rounded p-button-text p-button-danger">
+                                            </button>
                                             <button *ngIf="editing" pButton pRipple type="button" pSaveEditableRow
                                                 icon="pi pi-check" (click)="onRowEditSave(size, ri)"
                                                 class="p-button-rounded p-button-text p-button-success mr-2">
@@ -84,3 +96,25 @@
     </main>
     <app-admin-footer></app-admin-footer>
 </div>
+
+<p-dialog header="Thêm kích thước" [modal]="true" [(visible)]="visible" [style]="{ width: '25rem' }" styleClass="p-fluid">
+    <form>
+        <div class="mb-4">
+            <label for="name" class="form-label">Tên kích thước</label>
+            <input type="text" class="form-control" id="name" placeholder="Nhập tên" name="name">
+        </div>
+        <div class="mb-4">
+            <label for="desc" class="form-label">Mô tả</label>
+            <textarea class="form-control" id="desc" placeholder="Nhập mô tả" name="desc" rows="3"></textarea>
+        </div>
+        <div class="mb-4">
+            <label class="form-check-label me-2" for="active">Trạng thái:</label>
+            <input class="form-check-input" type="radio" name="active" id="visible"> Hoạt động
+            <input class="form-check-input ms-2" type="radio" name="active" id="disable"> ngừng bán
+        </div>
+        <div class="d-flex justify-content-end gap-2 mt-4">
+            <p-button label="Hủy" severity="secondary" (onClick)="visible = false" />
+            <p-button label="Lưu" (onClick)="visible = false" />
+        </div>
+    </form>
+</p-dialog>
