--- a/src/app/features/admin/manage-supplier/manage-supplier.component.html
+++ b/src/app/features/admin/manage-supplier/manage-supplier.component.html
@@ -3,28 +3,95 @@
         <div class="container-fluid px-4">
             <h1 class="mt-4">Nhà cung cấp</h1>
             <div class="mb-3 d-flex flex-row-reverse">
-                <button type="button" class="btn btn-dark" (click)="handleAddAction()">Thêm nhà cung cấp</button>
+                <button type="button" class="btn btn-dark" (click)="showDialog()">Thêm nhà cung cấp</button>
             </div>
             <div class="card mb-4">
-
+                <p-toast></p-toast>
+                <p-confirmDialog></p-confirmDialog>
                 <div class="card-body">
-                    <p-table [value]="suppliers" [paginator]="true" [rows]="10" [rowsPerPageOptions]="[10, 20, 30, 50]" [responsiveLayout]="'scroll'">
+                    <p-table #dt editMode="row" [value]="suppliers" dataKey="Supplier_ID" [paginator]="true" [rows]="10"
+                        [globalFilterFields]="['Supplier_ID', 'SupplierName', 'Address', 'PhoneNumber', 'Status']" [responsiveLayout]="'scroll'">
+                        <ng-template pTemplate="caption">
+                            <div class="d-flex">
+                                <span class="p-input-icon-left ml-auto">
+                                    <i class="pi pi-search"></i>
+                                    <input pInputText type="text" style="width: 200px;" (input)="handleInput($event, dt)" placeholder="Tìm kiếm" />
+                                </span>
+                            </div>
+                        </ng-template>
                         <ng-template pTemplate="header">
                             <tr>
-                                <th>ID</th>
-                                <th>Tên Nhà Cung Cấp</th>
-                                <th>Địa Chỉ</th>
-                                <th>Số Điện Thoại</th>
-                                <th>Trạng Thái</th>
+                                <th style="width:10%">ID</th>
+                                <th style="width:30%">Tên Nhà Cung Cấp</th>
+                                <th style="width:30%">Địa Chỉ</th>
+                                <th style="width:10%">Số Điện Thoại</th>
+                                <th style="width:10%">Trạng Thái</th>
+                                <th style="width:10%"></th>
                             </tr>
                         </ng-template>
-                        <ng-template pTemplate="body" let-supplier>
-                            <tr>
+                        <ng-template pTemplate="body" let-supplier let-editing="editing" let-ri="rowIndex">
+                            <tr [pEditableRow]="supplier">
                                 <td>{{ supplier.Supplier_ID }}</td>
-                                <td>{{ supplier.SupplierName }}</td>
-                                <td>{{ supplier.Address }}</td>
-                                <td>{{ supplier.PhoneNumber }}</td>
-                                <td><p-tag [value]="supplier.Status ? 'Hoạt động' : 'Ngừng bán' " [severity]="getSeverity(supplier.Status)"/></td>
+                                <td>
+                                    <p-cellEditor>
+                                        <ng-template pTemplate="input">
+                                            <input pInputText type="text" [(ngModel)]="supplier.SupplierName" />
+                                        </ng-template>
+                                        <ng-template pTemplate="output">
+                                            {{ supplier.SupplierName }}
+                                        </ng-template>
+                                    </p-cellEditor>
+                                </td>
+                                <td>
+                                    <p-cellEditor>
+                                        <ng-template pTemplate="input">
+                                            <input pInputText type="text" [(ngModel)]="supplier.Address" />
+                                        </ng-template>
+                                        <ng-template pTemplate="output">
+                                            {{ supplier.Address }}
+                                        </ng-template>
+                                    </p-cellEditor>
+                                </td>
+                                <td>
+                                    <p-cellEditor>
+                                        <ng-template pTemplate="input">
+                                            <input pInputText type="text" [(ngModel)]="supplier.PhoneNumber" />
+                                        </ng-template>
+                                        <ng-template pTemplate="output">
+                                            {{ supplier.PhoneNumber }}
+                                        </ng-template>
+                                    </p-cellEditor>
+                                </td>
+                                <td>
+                                    <p-cellEditor>
+                                        <ng-template pTemplate="input">
+                                            <p-dropdown [options]="statuses" appendTo="body" [(ngModel)]="supplier.Status" />
+                                        </ng-template>
+                                        <ng-template pTemplate="output">
+                                            <p-tag [value]="supplier.Status ? 'Hoạt động' : 'Ngừng bán' " [severity]="getSeverity(supplier.Status)" />
+                                        </ng-template>
+                                    </p-cellEditor>
+                                </td>
+                                <td>
+                                    <div class="flex align-items-center justify-content-center gap-2">
+                                        <button *ngIf="!editing" pButton pRipple type="button" pInitEditableRow
+                                            icon="pi pi-pencil" (click)="onRowEditInit(supplier)"
+                                            class="p-button-rounded p-button-text">
+                                        </button>
+                                        <button *ngIf="!editing" pButton pRipple type="button"
+                                            icon="pi pi-trash" (click)="deleteSupplier(supplier)"
+                                            class="p-button-rounded p-button-text p-button-danger">
+                                        </button>
+                                        <button *ngIf="editing" pButton pRipple type="button" pSaveEditableRow
+                                            icon="pi pi-check" (click)="onRowEditSave(supplier, ri)"
+                                            class="p-button-rounded p-button-text p-button-success mr-2">
+                                        </button>
+                                        <button *ngIf="editing" pButton pRipple type="button" pCancelEditableRow
+                                            icon="pi pi-times" (click)="onRowEditCancel(supplier, ri)"
+                                            class="p-button-rounded p-button-text p-button-danger">
+                                        </button>
+                                    </div>
+                                </td>
                             </tr>
                         </ng-template>
                     </p-table>
@@ -34,3 +101,29 @@
     </main>
     <app-admin-footer></app-admin-footer>
 </div>
+
+<p-dialog header="Thêm nhà cung cấp" [modal]="true" [(visible)]="visible" [style]="{ width: '30rem' }" styleClass="p-fluid">
+    <form>
+        <div class="mb-4">
+          <label for="name" class="form-label">Tên nhà cung cấp</label>
+          <input type="text" class="form-control" id="name" placeholder="Nhập tên" name="name">
+        </div>
+        <div class="mb-4">
+          <label for="address" class="form-label">Địa chỉ</label>
+          <textarea class="form-control" id="address" placeholder="Nhập mô tả" name="address" rows="3"></textarea>
+        </div>
+        <div class="mb-4">
+            <label for="phoneNumber" class="form-label">Số điện thoại</label>
+            <input type="tel" class="form-control" id="phoneNumber" placeholder="Nhập số điện thoại" name="phoneNumber">
+          </div>
+        <div class="mb-4">
+            <label class="form-check-label me-2" for="active">Trạng thái:</label>  
+            <input class="form-check-input" type="radio" name="active" id="visible"> Hoạt động
+            <input class="form-check-input ms-2" type="radio" name="active" id="disable"> Ngừng bán
+          </div>
+          <div class="d-flex justify-content-end gap-2 mt-4">
+            <p-button label="Hủy" severity="secondary" (onClick)="visible = false" />
+            <p-button label="Lưu" (onClick)="visible = false" />
+        </div>
+      </form>
+</p-dialog>
