--- a/src/app/features/shop/image-slider/image-slider.component.css
+++ b/src/app/features/shop/image-slider/image-slider.component.css
@@ -10,11 +10,41 @@
     opacity: 1;
 }
 
-#mainImage{
+#mainImage {
     text-align: center;
 }
 
-#mainImage img{
+#mainImage button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    padding: 0;
+    border: none;
+}
+
+#mainImage button:hover {
+    width: 34px;
+    height: 34px;
+}
+
+#mainImage button img{
+    width: 100%;
+    height: auto;
+}
+
+
+#mainImage .btn_left{
+    left: 16px;
+}
+
+#mainImage .btn_right{
+    right: 16px;
+}
+
+#mainImage img {
     width: 400px;
     height: 400px;
     max-height: 600px;
@@ -22,13 +52,13 @@
 }
 
 @media (max-width: 780px) {
-    #mainImage img{
+    #mainImage img {
         max-height: 350px;
     }
 }
 
 @media (max-width: 480px) {
-    #mainImage img{
+    #mainImage img {
         max-height: 200px;
     }
 }
